Rx: General Improvements  - Added recipe title  - Improved header readability (Light Mode)  - Fixed some code spelling errors

--- a/src/style/components/header.css
+++ b/src/style/components/header.css
@@ -10,7 +10,7 @@
 
     /* styling */
     background-color: transparent;
-    color: var(--foreground-color-200);
+    color: var(--brand-header-color);
 }
 
 #root>header .container {
